@@ -1,0 +1,4 @@
+	.text
+	.globl foo
+foo:
+	.byte 0
