@@ -1,3 +1,8 @@
+2009-03-20  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/9970
+	* ldlang.c (lang_end): Warn missing entry symbol for -pie.
+
 2009-03-19  Alan Modra  <amodra@bigpond.net.au>
 
 	* emultempl/spuelf.em (spu_before_allocation): Report errors from
